# tce-lib

./: .gitignore  CoNiCrFeMn-fitting.py  CoNiCrFeMn-interaction-vector.txt  README.md  TaW-fitting.py  constants.py  main.py  pyproject.toml  requirements.txt  test_lib.py  timings.py  tungsten-tantalum-features.py
.github/workflows/: pull-requests.yml  workflow.yml
CoNiCrFeMn_lammps/: CoNiCrFeMn.meam  relax.in
CoNiCrFeMn_lammps/samples/1000/: energy.txt
CoNiCrFeMn_lammps/samples/121/: energy.txt
CoNiCrFeMn_lammps/samples/1219/: energy.txt
CoNiCrFeMn_lammps/samples/1272/: energy.txt
CoNiCrFeMn_lammps/samples/1467/: energy.txt
assets/: favicon.py  logo.py
examples/: 0-copper-nickel-training.py  1-copper-nickel-mc.py  1-copper-nickel-mc2.py  2-copper-nickel-sro.py  3-sklearn-fitting.py  4-tensorial-property.py  5-callbacking.py  CuNi.pkl  calculator-interface.py  exotic-lattice.py  exotic-lattice2.py  iron-chrome-lammps.py  load-dataset-and-visualize.py  size-dependence.py  using-ase.py
experiments/CoNiCrFeMn/: CoNiCrFeMn-fitting.py  CoNiCrFeMn-interaction-vector.txt  data-file-template.txt  make-samples.py  sro-analysis.py  sro-run.py
experiments/FeCr/: make-samples.py
experiments/FeMg/: FeMg-fitting.py  FeMg.txt  make-samples.py
experiments/MgZn/: MgZn-fitting.py  MgZn.txt  make-samples.py  sgcmc.py
experiments/TaW/: TaW-fitting.py  convex-hull.py
experiments/benchmarking/: timings.py
tce/: __init__.py  calculator.py  constants.py  datasets.py  monte_carlo.py  structures.py  topology.py  training.py
visualization/: simple-cubic.py
(+2030 files in other folders)
