[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tce"
dynamic = ["version"]
description = "tensor cluster expansion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
author = { name = "Jacob Jeffries", email = "jwjeffr@clemson.edu" }
keywords = [
    "alloys"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy~=2.2.6",
    "sparse~=0.16.0",
    "scipy~=1.15.3",
    "opt-einsum~=3.4.0"
]

[project.urls]
Homepage = "https://github.com/MUEXLY/tce"

[project.optional-dependencies]
dev = [
    "hatchling~=1.27.0",
    "pytest~=8.0.2",
    "ruff~=0.9.4",
    "mypy~=1.13.0",
    "pdoc~=15.0.1",
]

[tool.hatch.version]
path = "tce/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/tce",
]
